discussion/kv_engine/155544/155544_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46827: Introduce KVBucket::hasMemoryInCheckpoint()

Used at VBucket add/set, same as where we verify our existing memory
conditions.
Currently the chk_mem_percentage is set to 1.0 in configuration, so the
memory behaviour of the system stays logically unchanged.

Change-Id: I29368cdee147fe6421398a75aff25f47e00725ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-06-25 08:17:17.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-25 08:19:10.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37329/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37329/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31842/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10892/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10892/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11810/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11960/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11960/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19848/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19848/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12286/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12286/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10242/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3276:26: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    if (bucket && !bucket->hasMemoryInCheckpoint()) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:49:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3427:26: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    if (bucket && !bucket->hasMemoryInCheckpoint()) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:49:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10242/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3276:26:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10242/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8842/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
